# BusinessWebsite

./: .gitignore  Build.hs  Gruntfile.js  README.md  deploy.sh  package.json  start.sh
HTML/: Gruntfile.js  blog.html  bower.json  impressum.html  index.html  keybase.txt  package.json  referenzen.html  schwerpunkte.html  termine.html  themen.html  (+2 more)
hakyll/: StringManipulation.hs  StringManipulationTest.hs  blog.html  hakyll.cabal  impressum.html  index.html  kommende-neu.json  nicole.cabal  referenzen.html  schwerpunkte.html  site.hs  stack.yaml  stringManipulation.hs  stringManipulationTest.hs  termine.html  themen.html  validation.html
hakyll/css/: screen.css
hakyll/data/termine/: kommende.json  vergangene.json
hakyll/posts/: 2010-09-22-autoboxing-is-evil.html  2010-12-19-story-point-estimation.html  2012-02-28-software-development-and-focus.html  2012-03-04-setters-destroy-objects.html  2012-09-13-the-eve-of-the-socrates-conference.html  2015-04-15-retrospective-prime-directive-eine-alternative.html  2015-10-19-einfuhrung-in-die-funktionale-programmierung.html  2015-10-29-socrates-germany.md  2015-12-20-lightweight-stubbing-of-ajax-requests-in-javascript.md  2016-05-16-shallow-rendering.md  2016-08-29-craftsman-swap-and-journeyman-tour.md  2016-11-17-password-hashing-algorithms.md  2016-12-09-offshoring.md  2016-12-13-haskell-parsec.md  2017-10-27-spec-by-example-and-polymer.md  2018-03-15-wie-man-eine-community-bauen-kann.md  2018-03-28-hoer-auf-zu-demotivieren.md
hakyll/templates/: default.html  footer.html  head.html  header.html  javascript.html  post.html
(+58 files in other folders)
