name:               nicole
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.8.*
                  , filepath
                  , aeson
                  , binary
  ghc-options:      -threaded
  default-language: Haskell2010

library
  exposed-modules:  StringManipulation
  build-depends:    base == 4.*
  default-language: Haskell2010

test-suite StringManipulationTest
  type:             exitcode-stdio-1.0
  main-is:          StringManipulationTest.hs
  build-depends:    base
                    , hspec
  default-language: Haskell2010
